Version 1.13.0-dev:
 * AI:
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI
     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
 * Campaigns:
   * The Hammer of Thursagan:
     * Fixed missing objective in 'The Court of Karrag'.
 * Language and i18n:
   * Updated translations: German, Scottish Gaelic, Slovak
 * Lua API:
   * Fix bug #21761: wesnoth.synchronize_choice will now give a warning when 
     the table returned by the user-specified function is not completely valid,
     when wesnoth is running in debug mode (--debug command line flag).
 * Units:
   * Increased the experience requirement for the Rami from 32 to 39
   * Increased the experience requirement for the Saree from 56 to 64
   * Changed sound timings for Khalifate melee attacks
   * New chill tempest animation for Lich/Ancient Lich
 * User interface:
   * Made orb and minmap colors configurable by the game preferences.
 * Miscellaneous and bug fixes:
   * Fix Fisher-Yates implemenation of Lua helper.shuffle (bug #21706)
   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Changed: Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby
     raising the limit for simultaneous sound effects from 5 to 21.
   * Fix bug #21758: "Ready not blocked while player pick faction."
   * Fix bug #18829: "ai sides show up as "controller=network" on remote clients".
     This issue is the source of some difficulties with mp campaigns which occur
     when the campaign is reloaded from a non-host side, or after a player rejoins
     from observer status. Hopefully, reloading campaigns is easier after this.

Version 1.11.11:
 * Add-ons server: